--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ footer{
     font-size: 6em;
     font-weight: 700;
     color: #f5f5f5;
+    margin-bottom: 0.5em;
     text-shadow: 1px 1px 1px #919191,
         1px 2px 1px #919191,
         1px 3px 1px #919191,
@@ -35,8 +36,12 @@ footer{
 }
 
 .presentacion{
-    border: solid;
-    border-color: aliceblue;
+    margin: 25em;
+    margin-top: 0em;
+    margin-bottom: 10em;
+    border: solid 1em;
+    border-radius: 10%;
+    border-color: rgb(255, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,8 +49,8 @@ footer{
 .sobreMi{
     padding-top: 2em;
     margin: 1em;
-    margin-left: 10em;
-    margin-right: 10em;
+    margin-left: 1em;
+    margin-right: 1em;
     font-size: 1.5em;
     font-family: verdana;
     display: flex;
@@ -126,7 +131,7 @@ footer{
 /* con la excepcion del body y algun que otro cambio en tamaño de fuente */
 
 :root {
-  --glow-color: hsl(186 100% 69%);
+  --glow-color: hsl(278, 100%, 29%);
 }
 
 *,
@@ -161,11 +166,11 @@ footer{
 .glowing-txt {
   float: left;
   margin-right: -0.8em;
-  -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+  -webkit-text-shadow: 0 0 0.125em hsla(290, 100%, 41%, 0.3),
     0 0 0.45em var(--glow-color);
-  -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+  -moz-text-shadow: 0 0 0.125em hsla(290, 100%, 41%, 0.3),
     0 0 0.45em var(--glow-color);
-  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color);
+  text-shadow: 0 0 0.125em hsla(290, 100%, 41%, 0.3), 0 0 0.45em var(--glow-color);
   animation: text-flicker 3s linear infinite;
 }
 
@@ -342,40 +347,51 @@ footer{
     justify-content: center;
     font-family: verdana;
     font-size: 1em;
-}
-
-.divCards{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 300px;
-  padding: 2px;
-  border: 2px solid #333;
-  border-radius: 10px;
-  background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.tituloCard{
-  font-size: 1.7em;
-}
-
-.descripcionCard{
-  font-size: 1em;
-}
-
-.imagenCard{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: auto;
-}
-
-#contenedor{
-  display:grid;
-grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* Columnas automáticas con un mínimo de 200px /
-gap: 20px; / Espacio entre las "cards" */
-}
+  }
+  
+  
+  .divCards{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 300px;
+    height: 450px;
+    padding: 2px;
+    border: 2px solid #333;
+    border-radius: 10px;
+    background-color: #00b2f8;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+  }
+  
+  .tituloCard{
+    font-size: 2em;
+  }
+  
+  .descripcionCard{
+    font-size: 1em;
+    margin: 0.5em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+  }
+  
+  .imagenCard{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 15em;
+  }
+  
+  #contenedor{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  
+  /* display:grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* Columnas automáticas con un mínimo de 200px / */
+  /* gap: 20px; / Espacio entre las "cards" */
